# the-front-page

./: .gitignore
config/: intel-sources.yaml  (+1 more)
worker/: pyproject.toml
worker/clawfeed_intel/: cli.py  db.py  doctor.py  launchagent.py  normalize.py  paths.py  runs.py  sources.py  timewindow.py
worker/clawfeed_intel/fetchers/: __init__.py  arxiv.py  base.py  gdelt.py  github.py  hn.py  hn_algolia.py  http.py  raw_cache.py  reddit.py  rss.py  runner.py  sec.py  website.py
worker/clawfeed_intel/llm/: __init__.py  client.py  gemini_cli.py  routing.py  schemas.py
worker/clawfeed_intel/pipeline/: cluster.py  compose.py  orchestrator.py  relevance.py  search_planner.py  summary.py
worker/scripts/: smoke_compose_gemini.py
worker/tests/: conftest.py  test_cleanup.py  test_cli_doctor.py  test_cli_run_daily.py  test_cli_run_topic.py  test_cluster.py  test_cluster_verdict.py  test_compose.py  test_db.py  test_doctor.py  test_fetch_state.py  test_fetchers_arxiv.py  test_fetchers_gdelt.py  test_fetchers_github.py  test_fetchers_hn.py  test_fetchers_hn_algolia.py  test_fetchers_http_ssrf.py  test_fetchers_raw_cache.py  test_fetchers_reddit.py  test_fetchers_rss.py  test_fetchers_runner.py  test_fetchers_sec.py  test_fetchers_website.py  test_gemini_cli.py  test_github_observations.py  test_item_summary_helper.py  test_launchagent.py  test_llm_calls.py  test_llm_client.py  test_llm_routing.py  test_llm_schemas.py  test_normalize.py  test_orchestrator.py  test_raw_items.py  test_relevance.py  test_search_planner.py  test_sources.py  test_summary.py  test_timewindow.py
(+12 files in other folders)
