[project]
name = "clawfeed-intel"
version = "0.1.0"
description = "Personal Intelligence Brief pipeline for ClawFeed (collector + intelligence worker)"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "feedparser>=6.0.11",
  "trafilatura>=1.12",
  "selectolax>=0.3.21",
  "pydantic>=2.7",
  "tenacity>=8.2",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
clawfeed-intel = "clawfeed_intel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawfeed_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
